WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89405
West-panning cursor does not match resize cursor, unlike all other directions
https://bugs.webkit.org/show_bug.cgi?id=89405
Summary
West-panning cursor does not match resize cursor, unlike all other directions
Avi Drissman
Reported
2012-06-18 17:31:01 PDT
In WebCore/platform/mac/CursorMac.mm, the panning and resize cursors all match, except for west. With the west panning cursor, it's mapped to EastWestResize.
Attachments
Patch
(1.45 KB, patch)
2012-06-18 17:36 PDT
,
Avi Drissman
darin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
updated version
(1.39 KB, patch)
2013-01-16 08:11 PST
,
Avi Drissman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Avi Drissman
Comment 1
2012-06-18 17:36:24 PDT
Created
attachment 148212
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-06-19 11:43:38 PDT
Do you have a test case showing this in action?
Avi Drissman
Comment 3
2012-06-19 11:56:41 PDT
There are two ways to get the west panning cursor. One is to explicitly call Cursor::westPanningCursor, which is only called from EventHandler::updatePanScrollState. Since PAN_SCROLLING isn't enabled on the Mac, this case is never seen. The other way to get that cursor is Cursor::fromType(Cursor::WestPanning), which is only called from WebKit2/Shared/WebCoreArgumentCoders.cpp, ArgumentCoder<Cursor>::decode. I'm not sure how to trace that back.
Avi Drissman
Comment 4
2012-07-17 11:53:05 PDT
I don't see what the issue is here. Panning cursors aren't usually compiled into the Mac build, so if we have them in CursorMac at all, we might as well get them right.
WebKit Review Bot
Comment 5
2013-01-15 15:43:06 PST
Comment on
attachment 148212
[details]
Patch Rejecting
attachment 148212
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: : /mnt/git/webkit-commit-queue Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/mac/CursorMac.mm Hunk #1 FAILED at 188. Hunk #2 FAILED at 204. 2 out of 2 hunks FAILED -- saving rejects to file Source/WebCore/platform/mac/CursorMac.mm.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Darin Adler']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/15901149
Avi Drissman
Comment 6
2013-01-15 22:02:38 PST
Darin, Thank you for the r+; I will upload a new version of this patch tomorrow.
Avi Drissman
Comment 7
2013-01-16 08:11:50 PST
Created
attachment 182984
[details]
updated version
Alexey Proskuryakov
Comment 8
2013-01-16 09:47:19 PST
Comment on
attachment 182984
[details]
updated version This was already reviewed, so you could have updated ChangeLog with Darin's name, and only requested cq? flag.
WebKit Review Bot
Comment 9
2013-01-16 09:50:28 PST
Comment on
attachment 182984
[details]
updated version Clearing flags on attachment: 182984 Committed
r139889
: <
http://trac.webkit.org/changeset/139889
>
WebKit Review Bot
Comment 10
2013-01-16 09:50:32 PST
All reviewed patches have been landed. Closing bug.
Avi Drissman
Comment 11
2013-01-16 09:57:18 PST
(In reply to
comment #8
)
> (From update of
attachment 182984
[details]
) > This was already reviewed, so you could have updated ChangeLog with Darin's name, and only requested cq? flag.
OK. I'm not that familiar with the WebKit review process, so the next time I will keep that in mind.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug