West-panning cursor does not match resize cursor, unlike all other directions https://bugs.webkit.org/show_bug.cgi?id=89405

Patch by Avi Drissman <avi@google.com> on 2013-01-16
Reviewed by Alexey Proskuryakov.

Existing manual tests.

* platform/mac/CursorMac.mm:
(WebCore::Cursor::ensurePlatformCursor):

Canonical link: https://commits.webkit.org/125270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139889 268f45cc-cd09-0410-ab3c-d52691b4dbfc